Fix alignment issues.
Removed attribution from grid to recenter card. Also address accessibility issue with h3 instead of h2

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -129,10 +129,11 @@ body{
 }
 
 .attribution{
-  place-self: end center;
+  position: absolute;
+  bottom: 0.5rem;
+  width: 100%;
   font-size: 11px;
   text-align: center;
-  margin-bottom: 4rem;
 }
 
 .attribution a{
